--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,35 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
+    <display-name>Archetype Created Web Application</display-name>
 
-   <servlet>
-     <servlet-name>TestServlet</servlet-name>
-     <servlet-class>com.wl.TestServlet</servlet-class>
-   </servlet>
+    <servlet>
+        <servlet-name>TestServlet</servlet-name>
+        <servlet-class>com.wl.TestServlet</servlet-class>
+    </servlet>
 
-     <servlet-mapping>
-       <servlet-name>TestServlet</servlet-name>
-       <url-pattern>/aa</url-pattern>
-     </servlet-mapping>
-
+    <servlet-mapping>
+        <servlet-name>TestServlet</servlet-name>
+        <url-pattern>/aa</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>TestServlet02</servlet-name>
+        <servlet-class>com.wl.TestServlet02</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>TestServlet02</servlet-name>
+        <url-pattern>/cc</url-pattern>
+    </servlet-mapping>
+    <context-param>
+        <param-name>companyName</param-name>
+        <param-value>itcast</param-value>
+    </context-param>
+    <context-param>
+        <param-name>address</param-name>
+        <param-value>zhejiang</param-value>
+    </context-param>
 </web-app>
