--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -150,4 +150,76 @@
         <servlet-name>IncludedServlet</servlet-name>
         <url-pattern>/IncludedServlet</url-pattern>
     </servlet-mapping>
+    <!--    cookie and session-->
+    <servlet>
+        <description></description>
+        <display-name>LastAccessServlet</display-name>
+        <servlet-name>LastAccessServlet</servlet-name>
+        <servlet-class>com.wl.cookie.example.LastAccessServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LastAccessServlet</servlet-name>
+        <url-pattern>/LastAccessServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description></description>
+        <display-name>ListBookServlet</display-name>
+        <servlet-name>ListBookServlet</servlet-name>
+        <servlet-class>com.wl.session.example01.ListBookServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ListBookServlet</servlet-name>
+        <url-pattern>/ListBookServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description></description>
+        <display-name>PurchaseServlet</display-name>
+        <servlet-name>PurchaseServlet</servlet-name>
+        <servlet-class>com.wl.session.example01.PurchaseServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PurchaseServlet</servlet-name>
+        <url-pattern>/PurchaseServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description></description>
+        <display-name>CartServlet</display-name>
+        <servlet-name>CartServlet</servlet-name>
+        <servlet-class>com.wl.session.example01.CartServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CartServlet</servlet-name>
+        <url-pattern>/CartServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description></description>
+        <display-name>IndexServlet</display-name>
+        <servlet-name>IndexServlet</servlet-name>
+        <servlet-class>com.wl.session.example02.IndexServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>IndexServlet</servlet-name>
+        <url-pattern>/IndexServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <description></description>
+        <display-name>LogoutServlet</display-name>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>com.wl.session.example02.LogoutServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/LogoutServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description></description>
+        <display-name>CheckServlet</display-name>
+        <servlet-name>CheckServlet</servlet-name>
+        <servlet-class>com.wl.session.example02.CheckServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CheckServlet</servlet-name>
+        <url-pattern>/CheckServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
